methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {
^MethodsReturning:2: error: expected class or object definition
def haveBaggle():Boolean = {
^