methods.returning.MethodsReturning.scala.code

def haveBaggle():Boolean = {
  var seenBaggle==false
  for (i<-1 to 6) {
    forward();
    if (isOverBaggle==true){
      seenBaggle= true)
      
    }
    forward();
  
  }
